Se agregan models/controller y se redirecciona el menu a cada una de las vistas

--- a/assents/css/login.css
+++ b/assents/css/login.css
@@ -1,16 +1,24 @@
 body{
-  background-image: url(../img/fondo.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  height:100vh;
 
 }
 
-p{
+.contenedor_principal{
+  margin: 0;
+  background-image: url(../img/fondo.jpg);
+  height: 100%;
+  width: 100%;
+  display:flex;
+
+}
+
+.p_login{
   text-align: center;
 }
 
-h2{
+.h2_login{
   text-align: center;
 }
 
